syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Empty {}

// 1, 2 e 3 é a ordem que os campos serão serializados
message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CrateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message CategoryList {
    repeated Category categories = 1;
}

message GetCategoryRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CrateCategoryRequest) returns (CategoryResponse) {}
    rpc ListCategories(Empty) returns (CategoryList) {}
    rpc GetCategory(GetCategoryRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CrateCategoryRequest) returns (stream CategoryList) {}
}